--- a/Cadastro/src/cadastro/Tela.form
+++ b/Cadastro/src/cadastro/Tela.form
@@ -195,6 +195,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="SALVAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBSalvarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTNome">
       <Properties>
